--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.adasa</groupId>
 	<artifactId>adasa</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name>java-project</name>
+    <url>http://maven.apache.org</url>
 
 	<properties>
 		<!-- https://maven.apache.org/general.html#encoding-warning -->
@@ -16,12 +18,18 @@
 
 	<dependencies>
 		<!-- TESTES -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
+		 <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
 
 		<!-- SQL SERVER -->
 		<dependency>
@@ -38,20 +46,6 @@
 		    <version>5.1.0.Final</version>
 		</dependency>
 		
-		<!--  CP30 GERENCIAR A CONEXAO -->
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-c3p0</artifactId>
-			<version>5.3.1.Final</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.jboss.logging</groupId>
-					<artifactId>jboss-logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-
 		<!-- LEITOR EXCEL -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -66,8 +60,6 @@
 			<version>3.11</version>
 		</dependency>
 
-		<!-- SERIALIZAR O TIPO GEOMETRY -->
-
 		<!-- FONTE DE ICONES -->
 		<dependency>
 			<groupId>de.jensd</groupId>
@@ -80,14 +72,6 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.10.3</version>
-		</dependency>
-
-	
-		<!-- LEITOR XML -->
-		<dependency>
-		    <groupId>com.thoughtworks.xstream</groupId>
-		    <artifactId>xstream</artifactId>
-		    <version>1.4.5</version>
 		</dependency>
 
 	</dependencies>
@@ -112,6 +96,18 @@
 									<mainClass>principal.Principal</mainClass>
 								</transformer>
 							</transformers>
+							
+							<filters>
+	                               <filter>
+					                  <artifact>*:*</artifact>
+					                  <excludes>
+					                    <exclude>META-INF/*.SF</exclude>
+					                    <exclude>META-INF/*.DSA</exclude>
+					                    <exclude>META-INF/*.RSA</exclude>
+					                  </excludes>
+	                				</filter>
+                				</filters>
+                				
 						</configuration>
 					</execution>
 				</executions>
