--- a/user.properties
+++ b/user.properties
@@ -1,2 +1,3 @@
-#Wed Sep 25 18:02:29 BRT 2019
+#Wed Oct 09 10:45:32 BRT 2019
+strWebDriver=C\:\\Users\\fabricio.barrozo\\Desktop\\java\\melhoriasSalvarLinkExcel\\chromedriver_76\\chromedriver.exe
 strEstiloCSS=/css/principal_mapa_azul.css
