--- a/user.properties
+++ b/user.properties
@@ -1,4 +1,4 @@
-#Mon Nov 04 11:31:42 BRST 2019
+#Tue Jan 28 11:52:10 GMT-03:00 2020
 strExcel=C\:\\Users\\fabricio.barrozo\\OneDrive - Agencia Reguladora de Aguas Energia e Saneamento Basico do Distrito Federal\\OUTORGA\\MODELOS SAULO AGOSTO 2019\\C\u00F3pia de PLANILHA MODELO PARA OUTORGA - 2019.1_BRANCO_MODELO (003).xlsm
-strWebDriver=C\:\\Users\\fabricio.barrozo\\Desktop\\java\\melhoriasSalvarLinkExcel\\chromedriver_76\\chromedriver.exe
+strWebDriver=C\:\\Users\\fabricio.barrozo\\OneDrive - Agencia Reguladora de Aguas Energia e Saneamento Basico do Distrito Federal\\JAVAOUTORGA\\chrome driver 78\\chromedriver.exe
 strEstiloCSS=/css/principal_mapa_azul.css
